--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "singleQuote": true,
   "trailingComma": "es5",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "svelteBracketNewLine": false,
+  "svelteSortOrder": "options-scripts-markup-styles",
+  "plugins": ["prettier-plugin-svelte"]
 }
