--- a/site/package.json
+++ b/site/package.json
@@ -14,8 +14,11 @@
     "@snowpack/plugin-svelte": "^3.4.1",
     "@snowpack/web-test-runner-plugin": "^0.1.5",
     "@testing-library/svelte": "^3.0.3",
+    "@types/faker": "^5.1.5",
     "@web/test-runner": "^0.10.2",
     "chai": "^4.2.0",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
     "snowpack": "^2.18.5"
   }
 }
